--- a/app/_config/api.yml
+++ b/app/_config/api.yml
@@ -4,3 +4,5 @@ Name: api
 Doggo\Task\FetchParksTask:
   api_title: 'Wellington City Council'
   api_url: 'https://doggo-test.s3-ap-southeast-2.amazonaws.com/WCC_Dog_Areas_20200213.geojson'
+  api_title_palmy: 'Palmerston North City Council'
+  api_url_palmy: 'https://doggo-test.s3-ap-southeast-2.amazonaws.com/PNCC_Dog_Areas_20200213.geojson'
